# ros2_control_demos_ext

./: README.md
example_1/: CMakeLists.txt  README.md  package.xml  ros2_control_demo_ext_example_1.xml
example_1/bringup/config/: ackermann_drive_controller.yaml
example_1/bringup/launch/: demo_test.launch.py  demo_test_helper.py  gazebo_default.launch.py
example_1/bringup/scripts/: compare_odom.py
example_1/description/gazebo/: test_ackermann_drive.sdf  test_ackermann_drive.xacro.sdf
example_1/doc/: userdoc.rst
example_1/hardware/: ackermannbot_system.cpp
example_1/test/: example_1_sdf_test.py
example_2/: CMakeLists.txt  README.md  package.xml
example_2/bringup/config/: diffbot_controllers.yaml
example_2/bringup/launch/: demo_test.launch.py  demo_test_helper.py  diffbot_rubicon.launch.py  rubicon.launch.py
example_2/doc/: userdoc.rst
example_2/hooks/: gz_sim_resource_path.dsv.in
example_2/models/costar_husky/: model.config  model.sdf  model_gz.sdf
example_2/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
example_2/worlds/: empty.sdf  rubicon.sdf
